# NaviDir

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/backend/: CMakeLists.txt  FileManager.cpp  FileManager.h  FileManager.hpp  file_manager.cpp  file_manager.h
src/frontend/: CMakeLists.txt  UI.cpp  UI.hpp  localTest.cpp
tests/: CMakeLists.txt  test_FileManager.cpp  test_UI.cpp
